# fizzbuzz

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/chglog/: changelog.yml  release.yml
.github/workflows/: deploy.yml
benches/: fizzbuzz_benchmark.rs
src/: cli.rs  generator.rs  lib.rs  main.rs
tests/cmd/: help.toml
