[package]
name = "fizzbuzz"
version = "0.1.4"
authors = ["Suyashtnt <suyashtnt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.16" }
structopt = "0.3"

# super fast release profile
[profile.release]
lto = "thin"
optlevel = 3
debug = false
panic = "abort"
