[package]
name = "fizzbuzz"
version = "1.0.0"
authors = ["Suyashtnt <suyashtnt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.16" }
clap = { version = "3.2", features = ["derive"] }

[dev-dependencies]
trycmd = "0.13"

# super fast release profile
[profile.release]
lto = "thin"
opt-level = 3
debug = false
panic = "abort"
