[package]
name = "fizzbuzz"
version = "1.0.0"
authors = ["Suyashtnt <suyashtnt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.17.0" }
clap = { version = "3.2.21", features = ["derive"] }

[dev-dependencies]
trycmd = "0.13.5"
criterion = "0.3.6"
pretty_assertions = "1.2.1"

[[bench]]
name = "fizzbuzz_benchmark"
harness = false

# super fast release profile
[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
debug = false
panic = "abort"
